--- a/Maboneng Youth Arts Collective/gallery.html
+++ b/Maboneng Youth Arts Collective/gallery.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Maboneng Youth Arts Collective</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <picture>
+        <source media="(max-width: 480px)" srcset="./assets">
+        <source media="(max-width: 768px)" srcset="./assets">   
+        <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Banner" class="banner">
+    </picture>
     <header>
         <nav>
             <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
@@ -39,3 +45,20 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
+## Changelog
+
+### [2025-09-24] — Part 2 CSS & Responsive Design Updates
+
+- Created and linked `style.css` to all HTML files.
+- Applied base styles: font family (`Helvetica Neue`), default font size (16px), line height, and background color.
+- Added CSS Reset for consistency across browsers.
+- Implemented Grid layout for `.container` with 3-column desktop layout.
+- Styled headings and paragraphs using typography scale (rem units).
+- Styled interactive buttons with hover and focus pseudo-classes.
+- Added responsive breakpoints:
+  - **768px (Tablet)**: switches to 2-column layout.
+  - **480px (Mobile)**: switches to 1-column layout and full-width buttons.
+- Used `rem`, `em`, and `%` units to improve responsiveness.
+
+
