--- a/Maboneng Youth Arts Collective/donate.html
+++ b/Maboneng Youth Arts Collective/donate.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <picture>
-        <source media="(max-width: 480px)" srcset="./assets">
-        <source media="(max-width: 768px)" srcset="./assets">   
-        <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Banner" class="banner">
+    <picture>  
+        <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Banner" class="banner">
     </picture>
     <header>
         <nav>
-            <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
+            <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -23,9 +21,8 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="artists.html">Artists</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="donate.html">Donate</a></li>
+                <li><a href="donate.html" class="active">Donate</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="POE.html">POE</a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +34,7 @@
             <ul>
                 <li>Bank Transfer: <strong>Account Name:</strong> Maboneng Youth Arts Collective<br><strong>Bank:</strong> Afrihost<br><strong>Account Number:</strong> 123456789</li>
                 <li>PayPal: <a href="#">paypal.me/mabonengyouth</a></li>
-                <li>SnapScan: <img src="./assets/OIP (6).webp" alt="SnapScan QR" style="height:80px;"></li>
+                <li>SnapScan: <img src="./assets/Scan me.webp" alt="SnapScan QR" style="height:80px;"></li>
             </ul>
             <h2>Success Stories</h2>
             <p>Read about how your support has helped our youth artists achieve their dreams!</p>
@@ -54,18 +51,5 @@
 </body>
 </html>
 
-## Changelog
 
-### [2025-09-24] — Part 2 CSS & Responsive Design Updates
-
-- Created and linked `style.css` to all HTML files.
-- Applied base styles: font family (`Helvetica Neue`), default font size (16px), line height, and background color.
-- Added CSS Reset for consistency across browsers.
-- Implemented Grid layout for `.container` with 3-column desktop layout.
-- Styled headings and paragraphs using typography scale (rem units).
-- Styled interactive buttons with hover and focus pseudo-classes.
-- Added responsive breakpoints:
-  - **768px (Tablet)**: switches to 2-column layout.
-  - **480px (Mobile)**: switches to 1-column layout and full-width buttons.
-- Used `rem`, `em`, and `%` units to improve responsiveness.
 
