--- a/Maboneng Youth Arts Collective/programs.html
+++ b/Maboneng Youth Arts Collective/programs.html
@@ -8,24 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <picture>
-        <source media="(max-width: 480px)" srcset="./assets">
-        <source media="(max-width: 768px)" srcset="./assets">   
-        <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Banner" class="banner">
+    <picture>   
+        <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Banner" class="banner">
     </picture>
     <header>
         <nav>
-            <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
+            <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="programs.html">Programs</a></li>
+                <li><a href="programs.html" class="active">Programs</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="artists.html">Artists</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="donate.html">Donate</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="POE.html">POE</a></li>
             </ul>
         </nav>
     </header>
@@ -49,19 +46,6 @@
 </body>
 </html>
 
-## Changelog
 
-### [2025-09-24] — Part 2 CSS & Responsive Design Updates
-
-- Created and linked `style.css` to all HTML files.
-- Applied base styles: font family (`Helvetica Neue`), default font size (16px), line height, and background color.
-- Added CSS Reset for consistency across browsers.
-- Implemented Grid layout for `.container` with 3-column desktop layout.
-- Styled headings and paragraphs using typography scale (rem units).
-- Styled interactive buttons with hover and focus pseudo-classes.
-- Added responsive breakpoints:
-  - **768px (Tablet)**: switches to 2-column layout.
-  - **480px (Mobile)**: switches to 1-column layout and full-width buttons.
-- Used `rem`, `em`, and `%` units to improve responsiveness.
 
 
