--- a/about.html
+++ b/about.html
@@ -1,25 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Maboneng Youth Arts Collective</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+<style>
+        /* Accordion Styles */
+        .accordion {
+            background-color: #f3f3f3;
+            color: rgb(15, 15, 15);
+            cursor: pointer;
+            padding: 15px 20px;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 1.1em;
+            transition: 0.3s ease;
+            margin-top: 10px;
+            border-radius: 8px;
+        }
+
+        .accordion:hover {
+            background-color: rgb(23, 22, 22);
+        }
+
+        .accordion.active {
+            background-color: #f7f3f3;
+            color: rgb(251, 249, 249);
+        }
+
+        .panel {
+            padding: 0 20px;
+            display: none;
+            background-color: rgb(255, 254, 254);
+            overflow: hidden;
+            border-radius: 0 0 8px 8px;
+            margin-bottom: 10px;
+            border-left: 3px solid #444;
+        }
+
+        .panel p, .panel ul {
+            margin: 15px 0;
+        }
+
+        /* Gallery Styles */
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 10px;
+            margin-top: 20px;
+        }
+
+        .gallery img {
+            width: 100%;
+            cursor: pointer;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+
+        /* Lightbox Styles */
+        .lightbox {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(250, 249, 249, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+        }
+
+        .lightbox img {
+            max-width: 90%;
+            max-height: 80%;
+            border-radius: 10px;
+        }
+
+        .lightbox:target {
+            display: flex;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: 20px;
+            right: 40px;
+            color: rgb(251, 247, 247);
+            font-size: 2rem;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        /* Footer Styling */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 15px 10px;
+            margin-top: 30px;
+        }
+
+        #timestamp {
+            font-size: 0.9em;
+            color: #bbb;
+            margin-top: 5px;
+            display: block;
+        }
+    </style>
 <body>
+
+    <picture> 
+        <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Banner" class="banner" loading="lazy">
+    </picture>
     <header>
         <nav>
-            <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
+            <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Logo" class="logo" style="height: 50px;">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html" class="active">About Us</a></li>
                 <li><a href="programs.html">Programs</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="artists.html">Artists</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="donate.html">Donate</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="POE.html">POE</a></li>
             </ul>
         </nav>
     </header>
@@ -27,11 +143,20 @@
         <section>
             <h1>About Us</h1>
             <p>The Maboneng Youth Arts Collective is an artistic initiative that uses spoken words, dance, music, visual arts and street theatre to uplift young people in Johannesburg’s inner city.</p>
-            <h2>Our Vision</h2>
-            <p>To empower youth through creative expression and open doors to careers in the arts.</p>
-            <h2>Our Story</h2>
-            <p>Founded in 2020, we have grown from a small group to a vibrant collective, hosting exhibitions, performances, workshops and mentorships.</p>
-            <h2>Our Team</h2>
+            
+            <!-- Accordion Sections -->
+            <button class="accordion">Background</button>
+            <div class="panel">
+                <p>Founded in 2010, the collective has been a beacon of hope and creativity for young artists in the Maboneng Precinct. Our mission is to empower youth through the arts, providing them with a platform to express themselves and develop their talents.</p>
+            </div>
+
+            <button class="accordion">Vision</button>
+            <div class="panel">
+                <p>To create a vibrant community where young artists can thrive, collaborate, and contribute to the cultural landscape of Johannesburg.</p>
+            </div>
+
+            <button class="accordion">Our Team</button>
+            <div class="panel">     
             <ul>
                 <li>Founder: Thabo Maseko</li>
                 <li>Coordinator: Lerato Khumalo</li>
@@ -42,7 +167,33 @@
     </main>
     <footer>
         <p>&copy; 2025 Maboneng Youth Arts Collective. All rights reserved.</p>
+        <span id="timestamp"></span>
     </footer>
-    <script src="js/main.js"></script>
+
+    <script>
+        // Accordion Functionality
+        const accordions = document.querySelectorAll('.accordion');
+        accordions.forEach(acc => {
+            acc.addEventListener('click', function() {
+                this.classList.toggle('active');
+                const panel = this.nextElementSibling;
+                panel.style.display = panel.style.display === "block" ? "none" : "block";
+            });
+        });
+
+        // Dynamic timestamp functionality
+        function updateTimestamp() {
+            const now = new Date();
+            const options = { year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+            document.getElementById('timestamp').textContent = `Current time: ${now.toLocaleDateString('en-GB', options)}`;
+        }
+
+        // update timestamp on page load and every minute
+        updateTimestamp();  
+        setInterval(updateTimestamp, 1000);
+    </script>
 </body>
 </html>
+
+
+
