--- a/donate.html
+++ b/donate.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate - Maboneng Youth Arts Collective</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <picture>  
+        <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Banner" class="banner">
+    </picture>
     <header>
         <nav>
-            <img src="./assets/OIP.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
+            <img src="./assets/Youth Collective Banner.webp" alt="Maboneng Youth Arts Collective Logo" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -17,9 +21,8 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="artists.html">Artists</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="donate.html">Donate</a></li>
+                <li><a href="donate.html" class="active">Donate</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="POE.html">POE</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +34,7 @@
             <ul>
                 <li>Bank Transfer: <strong>Account Name:</strong> Maboneng Youth Arts Collective<br><strong>Bank:</strong> Afrihost<br><strong>Account Number:</strong> 123456789</li>
                 <li>PayPal: <a href="#">paypal.me/mabonengyouth</a></li>
-                <li>SnapScan: <img src="./assets/OIP (6).webp" alt="SnapScan QR" style="height:80px;"></li>
+                <li>SnapScan: <img src="./assets/Scan me.webp" alt="SnapScan QR" style="height:80px;"></li>
             </ul>
             <h2>Success Stories</h2>
             <p>Read about how your support has helped our youth artists achieve their dreams!</p>
@@ -47,3 +50,6 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
+
+
